{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 832,
  "lineage": "e1b64962-f172-71c4-ad51-759c6e1bfc9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0150d4318fd9a001f",
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:elastic-ip/eipalloc-0150d4318fd9a001f",
            "association_id": "eipassoc-00a8bbaf0cb01d867",
            "domain": "vpc",
            "id": "eipalloc-0150d4318fd9a001f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-088ee682a68866901",
            "private_dns": "ip-10-0-10-57.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.57",
            "public_dns": "ec2-43-202-227-139.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.227.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEC-PRD-VPC-EIP-ap-northeast-2a",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-EIP-ap-northeast-2a",
              "Project": "project-name"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b64a6921cd534d70",
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:elastic-ip/eipalloc-0b64a6921cd534d70",
            "association_id": "eipassoc-073312d426e0d1685",
            "domain": "vpc",
            "id": "eipalloc-0b64a6921cd534d70",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e1055c0e3808da29",
            "private_dns": "ip-10-0-20-42.ap-northeast-2.compute.internal",
            "private_ip": "10.0.20.42",
            "public_dns": "ec2-43-203-23-68.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.23.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEC-PRD-VPC-EIP-ap-northeast-2c",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-EIP-ap-northeast-2c",
              "Project": "project-name"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:instance/i-00450a4f501f2be24",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00450a4f501f2be24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_project-default",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9c984dced7522fe",
            "private_dns": "ip-10-0-10-113.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.113",
            "public_dns": "ec2-54-180-158-249.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.158.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f8300dcb759b874",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c7ce6f7e394584b0"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08f9ceb4b74438cdb",
            "tags": {
              "Name": "basion_host"
            },
            "tags_all": {
              "Name": "basion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7ce6f7e394584b0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_key_pair.aws_project",
            "aws_security_group.PUB-SG",
            "aws_subnet.PUB-2A",
            "aws_vpc.SEC-PRD-VPC",
            "tls_private_key.aws_private_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:internet-gateway/igw-05ee9990cbdd5d6bf",
            "id": "igw-05ee9990cbdd5d6bf",
            "owner_id": "038462785952",
            "tags": {
              "Name": "SEC-PRD-VPC-IGW",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-IGW",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_subnet.PUB-2A",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0150d4318fd9a001f",
            "association_id": "eipassoc-00a8bbaf0cb01d867",
            "connectivity_type": "public",
            "id": "nat-0eb0af75320b50623",
            "network_interface_id": "eni-088ee682a68866901",
            "private_ip": "10.0.10.57",
            "public_ip": "43.202.227.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f9ceb4b74438cdb",
            "tags": {
              "Name": "SEC-PRD-VPC-NGW-ap-northeast-2a",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-NGW-ap-northeast-2a",
              "Project": "project-name"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b64a6921cd534d70",
            "association_id": "eipassoc-073312d426e0d1685",
            "connectivity_type": "public",
            "id": "nat-0fd5738afc16797ce",
            "network_interface_id": "eni-0e1055c0e3808da29",
            "private_ip": "10.0.20.42",
            "public_ip": "43.203.23.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00659e84481ca19bc",
            "tags": {
              "Name": "SEC-PRD-VPC-NGW-ap-northeast-2c",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-NGW-ap-northeast-2c",
              "Project": "project-name"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-PRI-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:route-table/rtb-09387ca50f20d8e3c",
            "id": "rtb-09387ca50f20d8e3c",
            "owner_id": "038462785952",
            "propagating_vgws": [
              "vgw-09f2a4fc82715cd98"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb0af75320b50623",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEC-PRD-VPC-RT-PRI-2A",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-RT-PRI-2A",
              "Project": "project-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-PRI-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:route-table/rtb-0b46ab5b259f31ee6",
            "id": "rtb-0b46ab5b259f31ee6",
            "owner_id": "038462785952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd5738afc16797ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEC-PRD-VPC-RT-PRI-2C",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-RT-PRI-2C",
              "Project": "project-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:route-table/rtb-04351c2a3a8f0a83c",
            "id": "rtb-04351c2a3a8f0a83c",
            "owner_id": "038462785952",
            "propagating_vgws": [
              "vgw-09f2a4fc82715cd98"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ee9990cbdd5d6bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEC-PRD-VPC-RT-PUB",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-RT-PUB",
              "Project": "project-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_subnet.PUB-2A",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b289a5dbd55100",
            "route_table_id": "rtb-09387ca50f20d8e3c",
            "subnet_id": "subnet-022823ffc77676c1b"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.RT-PRI-2A",
            "aws_subnet.PRI-2A",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0502714e6821a89d4",
            "route_table_id": "rtb-0b46ab5b259f31ee6",
            "subnet_id": "subnet-080340c130bfd6e50"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.RT-PRI-2C",
            "aws_subnet.PRI-2C",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI-RDS-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0361401d7bbb85bad",
            "route_table_id": "rtb-09387ca50f20d8e3c",
            "subnet_id": "subnet-018809a0b2573b774"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.RT-PRI-2A",
            "aws_subnet.PRI-RDS-2A",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI-RDS-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc1dc59305ace70e",
            "route_table_id": "rtb-0b46ab5b259f31ee6",
            "subnet_id": "subnet-02329894595fdd84c"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.RT-PRI-2C",
            "aws_subnet.PRI-RDS-2C",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUB-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641a5e0a561f80e4",
            "route_table_id": "rtb-04351c2a3a8f0a83c",
            "subnet_id": "subnet-08f9ceb4b74438cdb"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT-PUB",
            "aws_subnet.PUB-2A",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUB-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0094e6e3a21bc62c2",
            "route_table_id": "rtb-04351c2a3a8f0a83c",
            "subnet_id": "subnet-00659e84481ca19bc"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT-PUB",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRI-RDS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:security-group/sg-03e41cadaba22c54a",
            "description": "Allow HTTP traffic to MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e41cadaba22c54a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "8080 from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL/Aurora from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7ce6f7e394584b0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PRI-RDS-SG",
            "name_prefix": "",
            "owner_id": "038462785952",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "PRI-RDS-SG"
            },
            "tags_all": {
              "name": "PRI-RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gateway",
            "aws_security_group.PUB-SG",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRI-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:security-group/sg-0d7d69d36148c51f3",
            "description": "Allow HTTP traffic to Tomcat",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7d69d36148c51f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "8080 from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL/Aurora from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7ce6f7e394584b0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PRI-SG",
            "name_prefix": "",
            "owner_id": "038462785952",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "PRI-SG"
            },
            "tags_all": {
              "name": "PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gateway",
            "aws_security_group.PUB-SG",
            "aws_subnet.PUB-2A",
            "aws_subnet.PUB-2C",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PUB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:security-group/sg-0c7ce6f7e394584b0",
            "description": "Allow HTTP and HTTPS traffic to Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7ce6f7e394584b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP from anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PUB-SG",
            "name_prefix": "",
            "owner_id": "038462785952",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "PUB-SG"
            },
            "tags_all": {
              "name": "PUB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_subnet.PUB-2A",
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-022823ffc77676c1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022823ffc77676c1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PRI-2A",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PRI-2A",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-080340c130bfd6e50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080340c130bfd6e50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PRI-2C",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PRI-2C",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI-RDS-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-018809a0b2573b774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018809a0b2573b774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PRI-RDS-2A",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PRI-RDS-2A",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI-RDS-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-02329894595fdd84c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02329894595fdd84c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PRI-RDS-2C",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PRI-RDS-2C",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-08f9ceb4b74438cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f9ceb4b74438cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PUB-2A",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PUB-2A",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:subnet/subnet-00659e84481ca19bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00659e84481ca19bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038462785952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEC-PRD-VPC-PUB-2C",
              "Project": "project-name"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC-PUB-2C",
              "Project": "project-name"
            },
            "vpc_id": "vpc-00d059a1572ebf24a"
          },
          "dependencies": [
            "aws_vpc.SEC-PRD-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SEC-PRD-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462785952:vpc/vpc-00d059a1572ebf24a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09857d1a424009b2d",
            "default_route_table_id": "rtb-0626e2c17c00bf12e",
            "default_security_group_id": "sg-04874dbba885536ec",
            "dhcp_options_id": "dopt-0c0614d14808da98d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d059a1572ebf24a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0626e2c17c00bf12e",
            "owner_id": "038462785952",
            "tags": {
              "Name": "SEC-PRD-VPC"
            },
            "tags_all": {
              "Name": "SEC-PRD-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-12-15T03:54:48.642-08:00",
            "deny": [],
            "description": "Allow SSH, HTTP, HTTPS, ICMP, and 8080 traffic from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-thought-440807-g3/global/firewalls/allow-bastion-ssh",
            "log_config": [],
            "name": "allow-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
            "priority": 1000,
            "project": "deep-thought-440807-g3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/firewalls/allow-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20241119",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/zones/asia-northeast3-a/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-15T05:14:45.080-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/deep-thought-440807-g3/zones/asia-northeast3-a/instances/bastion-host",
            "instance_id": "8759841031743301803",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEArJQ9...(생략)...key1 ubuntu"
            },
            "metadata_fingerprint": "fDoSI67rIIE=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt update -y\nsudo apt install -y openssh-server\nsudo service sshd start\n\nsudo mkdir -p /home/ubuntu/.ssh\nsudo chown ubuntu:ubuntu /home/ubuntu/.ssh\n\necho \"${private_key}\" | base64 --decode | sudo tee /home/ubuntu/.ssh/gibeom01.json \u003e /dev/null\n\nsudo chmod 600 /home/ubuntu/.ssh/gibeom01.json\nsudo chown ubuntu:ubuntu /home/ubuntu/.ssh/gibeom01.json\n\nsudo apt-get install -y apt-transport-https ca-certificates gnupg curl [...]
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.201.71",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
                "network_ip": "10.0.70.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pub",
                "subnetwork_project": "deep-thought-440807-g3"
              }
            ],
            "project": "deep-thought-440807-g3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/zones/asia-northeast3-a/instances/bastion-host",
            "service_account": [
              {
                "email": "635009463326-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-northeast3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.GCP_PUB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/deep-thought-440807-g3/global/networks/project-vpc",
            "mtu": 0,
            "name": "project-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5600044651616894355",
            "project": "deep-thought-440807-g3",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-12-15T03:54:48.692-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/deep-thought-440807-g3/regions/asia-northeast3/routers/ha-vpn-router",
            "name": "ha-vpn-router",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
            "project": "deep-thought-440807-g3",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/regions/asia-northeast3/routers/ha-vpn-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "GCP_PRI_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-15T03:54:49.656-08:00",
            "gateway_address": "10.0.80.1",
            "id": "projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pri-a",
            "ip_cidr_range": "10.0.80.0/21",
            "name": "gcp-pri-a",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deep-thought-440807-g3",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.120.0/22",
                "range_name": "pri-a-nginxweb-pods"
              },
              {
                "ip_cidr_range": "10.0.140.0/22",
                "range_name": "pri-a-nginxweb-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pri-a",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1529191450656603494
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "GCP_PRI_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-15T03:54:49.539-08:00",
            "gateway_address": "10.0.90.1",
            "id": "projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pri-c",
            "ip_cidr_range": "10.0.90.0/24",
            "name": "gcp-pri-c",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deep-thought-440807-g3",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.92.0/22",
                "range_name": "pri-c-nginxweb-pods"
              },
              {
                "ip_cidr_range": "10.0.96.0/24",
                "range_name": "pri-c-nginxweb-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pri-c",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8827281832290778470
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "GCP_PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-15T03:54:49.809-08:00",
            "gateway_address": "10.0.70.1",
            "id": "projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pub",
            "ip_cidr_range": "10.0.70.0/24",
            "name": "gcp-pub",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/global/networks/project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deep-thought-440807-g3",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.72.0/22",
                "range_name": "pub-nginxweb-pods"
              },
              {
                "ip_cidr_range": "10.0.76.0/24",
                "range_name": "pub-nginxweb-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-thought-440807-g3/regions/asia-northeast3/subnetworks/gcp-pub",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3447487165476601190
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}